# secrets-engine

./: .gitignore  Cargo.toml  README.md  install.sh  uninstall.sh
crates/secretlens-ai/: Cargo.toml
crates/secretlens-ai/src/: cloud_provider.rs  error.rs  lib.rs  local_provider.rs  null_provider.rs  provider.rs
crates/secretlens-analyzers/: Cargo.toml
crates/secretlens-analyzers/src/: ast_analyzer.rs  error.rs  lib.rs  regex_analyzer.rs
crates/secretlens-core/: Cargo.toml
crates/secretlens-core/src/: error.rs  finding.rs  lib.rs  protocol.rs  rule.rs
crates/secretlens-http/: Cargo.toml
crates/secretlens-http/src/: error.rs  lib.rs  rotation_forwarder.rs  routes.rs  server.rs
crates/secretlens-pipeline/: Cargo.toml
crates/secretlens-pipeline/src/: deduplicator.rs  error.rs  lib.rs  pipeline.rs  redactor.rs  sarif.rs
crates/secretlens-rules/: Cargo.toml
crates/secretlens-rules/src/: defaults.rs  error.rs  lib.rs  loader.rs  registry.rs
desktop/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json  vitest.config.ts
desktop/src/main/: index.ts  preload.ts
desktop/src/main/compliance/: ComplianceAgents.ts  ComplianceService.ts  PdfParser.ts  types.ts
desktop/src/renderer/: App.tsx  index.html
desktop/src/renderer/components/: AllResolvedScreen.tsx  AwsCredentialsModal.tsx  ComplianceTab.tsx  FindingDetail.tsx  FindingsList.tsx  PartialResolutionScreen.tsx  ScriptModal.tsx
desktop/src/renderer/services/: SecretIngestionService.ts
desktop/src/renderer/styles/: index.css
desktop/src/shared/: types.ts
desktop/tests/: engine.test.ts  findings.test.ts  integration.test.ts  types.test.ts
hooks/: pre-commit
rules/: ast-javascript-eval.yaml  ast-javascript-weak-crypto.yaml  ast-python-eval.yaml  ast-python-exec.yaml  performance-sync-file-ops.yaml  security-anthropic-key.yaml  security-api-keys.yaml  security-aws-access-key.yaml  security-cloudflare.yaml  security-github-token.yaml  security-google-api-key.yaml  security-jwt-token.yaml  security-openai-key.yaml  security-passwords.yaml  security-private-key.yaml  security-sendgrid-key.yaml  security-slack-webhook.yaml  security-sql-injection.yaml  security-stripe-key.yaml  security-twilio.yaml
src/: main.rs
