[package]
name = "secretlens-rules"
version = "1.0.0"
edition = "2021"
description = "YAML rule loading, validation, and registry for SecretLens"

[dependencies]
secretlens-core = { path = "../secretlens-core" }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = "3"
